tests/fixtures/positive/empty-blocks/EmptyForBlock.kt
package fixtures.positive.emptyblocks

fun loopNothing() {
    for (i in 1..10) { }
}
