tests/fixtures/negative/empty-blocks/EmptyFinallyBlock.kt
package fixtures.negative.emptyblocks

fun doWork() {
    try {
        riskyOperation()
    } finally {
        cleanup()
    }
}
